# terminal-music-player

./: .gitignore  Cargo.toml  README.md  config.toml
src/: config.rs  controls.rs  main.rs  playlist.rs  ui.rs
