[package]
name = "terminal-music-player"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = "0.19.0"
crossterm = "0.28.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.7"
log = "0.4"
env_logger = "0.11.5"
reqwest = { version = "0.12.7", features = ["blocking"] }
symphonia = { version = "0.5", features = ["mp3"] }
